# TDE

./: .clangd  .gitignore  Doxyfile  README.md  about_8hpp.html  about_8hpp.js  about_8hpp_source.html  annotated.html  annotated_dup.js  appbutton_8hpp.html  appbutton_8hpp.js  appbutton_8hpp_source.html  appcard_8hpp.html  appcard_8hpp.js  appcard_8hpp_source.html  appfetcher_8hpp.html  appfetcher_8hpp.js  appfetcher_8hpp_source.html  appitem_8hpp.html  appitem_8hpp.js  appitem_8hpp_source.html  applauncher_8hpp.html  applauncher_8hpp.js  applauncher_8hpp_source.html  application_8hpp.html  application_8hpp.js  application_8hpp_source.html  applist_8hpp.html  applist_8hpp.js  applist_8hpp_source.html  builder_8hpp.html  builder_8hpp.js  builder_8hpp_source.html  buildinfo_8hpp.html  buildinfo_8hpp.js  buildinfo_8hpp_source.html  builtin_2about_2include_2application_8hpp_source.html  button_8hpp.html  button_8hpp.js  button_8hpp_source.html  (+318 more)
assets/: COPYING  README.md  assets.qrc  meson.build  style.qss
assets/styles/: application.qss  components.qss  default.qss  desktop.qss
builtin/: meson.build  tde.cpp
builtin/about/: meson.build
builtin/about/include/: about.hpp  buildinfo.hpp  description.hpp
builtin/about/src/: about.cpp  buildinfo.cpp  description.cpp  main.cpp
builtin/monitor/: meson.build
builtin/monitor/include/: monitor.hpp  resource_monitor.hpp
builtin/monitor/src/: main.cpp  monitor.cpp  resource_monitor.cpp
include/: meson.build
include/tde/: application.hpp  common.hpp  config.hpp  meson.build  settings.hpp  startmenu.hpp
include/tde/app/: builder.hpp  fetcher.hpp  info.hpp  launcher.hpp  meson.build
include/tde/assets/: icons.hpp  styles.hpp
include/tde/helpers/: appfetcher.hpp  applauncher.hpp  meson.build
include/tde/sys/: cpu.hpp  fs.hpp  memory.hpp
include/tde/widgets/: appbutton.hpp  appcard.hpp  appitem.hpp  applist.hpp  delimiter.hpp  desktop.hpp  desktopitem.hpp  dock.hpp  icon.hpp  meson.build  radioselector.hpp  ringprogress.hpp  router.hpp  startmenu.hpp  statusbar.hpp  style.hpp  tray.hpp
include/tde/widgets/app/: button.hpp  card.hpp  container.hpp  decoration.hpp
include/tde/widgets/startmenu/: syspanel.hpp  toolbutton.hpp  toolpanel.hpp
include/tde/widgets/text/: header.hpp
include/tde/widgets/tray/: clock.hpp  startmenubutton.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_b.js  enums_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_7.js  files_8.js  files_9.js  (+25 more)
src/: application.cpp  main.cpp  meson.build  settings.cpp
src/app/: fetcher.cpp  launcher.cpp  meson.build
src/assets/: icons.cpp  meson.build  styles.cpp
src/helpers/: appfetcher.cpp  applauncher.cpp  meson.build
src/sys/: cpu.cpp  fs.cpp  memory.cpp  meson.build
src/widgets/: appbutton.cpp  appcard.cpp  appitem.cpp  applist.cpp  desktop.cpp  desktopitem.cpp  dock.cpp  icon.cpp  meson.build  radioselector.cpp  ringprogress.cpp  router.cpp  startmenu.cpp  statusbar.cpp  style.cpp  tray.cpp
src/widgets/app/: button.cpp  card.cpp  container.cpp  decoration.cpp
src/widgets/startmenu/: syspanel.cpp  toolbutton.cpp  toolpanel.cpp
src/widgets/tray/: clock.cpp  startmenubutton.cpp
