lib_qt_moc_src = files(
  'tde/app/fetcher.hpp',
  'tde/app/launcher.hpp',
  'tde/settings.hpp',
  'tde/widgets/app/button.hpp',
  'tde/widgets/app/card.hpp',
  'tde/widgets/app/container.hpp',
  'tde/widgets/app/decoration.hpp',
  'tde/widgets/delimiter.hpp',
  'tde/widgets/desktop.hpp',
  'tde/widgets/dock.hpp',
  'tde/widgets/radioselector.hpp',
  'tde/widgets/ringprogress.hpp',
  'tde/widgets/router.hpp',
  'tde/widgets/text/header.hpp',
  'tde/widgets/tray.hpp',
  'tde/widgets/tray/clock.hpp',
)

lib_inc = include_directories('.')

install_subdir('tde', install_dir: 'include')